# rodrigozago

./: README.md
XDR/: client.go  server.py
corba/java/Hello/HelloApp/: Hello.java  HelloHelper.java  HelloHolder.java  HelloOperations.java  HelloPOA.java  _HelloStub.java
corba/java/Hello/orb.db/: NC0
corba/python/orbit-python-0.1.3/: AUTHORS  ChangeLog  Makefile.in  README  aclocal.m4  configure  configure.in
corba/python/orbit-python-0.1.3/src/: CORBA_ORB.c  CORBA_ORB.h  CORBA_TypeCode.c  CORBA_TypeCode.h  CORBA_any.c  CORBA_any.h  CORBA_fixed.c  CORBA_fixed.h  CORBAmodule.c  CORBAmodule.h  Makefile.am  Makefile.in  PortableServer.c  PortableServer.h  client.c  demarshal.c  except.c  idl.c  marshal.c  server.c  test-client  test-server  test-suite.idl  test.sh  types.c  types.h
corba/python/pyorbit-2.0.0/: AUTHORS  Makefile.am  Makefile.in  NEWS  PKG-INFO  aclocal.m4  configure  configure.in  ltmain.sh  pyorbit.spec
corba/python/pyorbit-2.0.0/src/: Makefile.am  Makefile.in  ORBitmodule.c  pycorba-any.c  pycorba-enum.c  pycorba-exceptions.c  pycorba-fixed.c  pycorba-marshal.c  pycorba-method.c  pycorba-object.c  pycorba-orb.c  pycorba-struct.c  pycorba-typecode.c  pyorbit-poa.c  pyorbit-private.h  pyorbit-servant.c  pyorbit-utils.c  pyorbit.h  stub-gen.c
corba/python/pyorbit-2.0.0/tests/: Makefile.in
corba/python/pyorbit-2.0.0/tests/c-inproc/: Makefile.in
xdr_json/: client.go  readme.md  server.py
